Added terminal stuff (experimental)

--- a/html_orig/index.html
+++ b/html_orig/index.html
@@ -17,4 +17,4 @@
 	<button>1</button><button>2</button><button>3</button><button>4</button>
 </div>
 
-<script>init()</script>
+<script>init(%screenData%)</script>
