Added messaging from browser to server, tap handling, improved resize on clientside

--- a/html_orig/termtest.html
+++ b/html_orig/termtest.html
@@ -18,4 +18,4 @@
 	--><button data-n="5">5</button>
 </div>
 
-<script>init(%screenData%)</script>
+<script>init({w: 26, h:10, x:0,y:0,screen:"70 t259"})</script>
