Small front-end improvements + made screen clearing apply cursor color to cleared area

--- a/html_orig/help.html
+++ b/html_orig/help.html
@@ -44,7 +44,7 @@
 	<b>Foreground</b>
 
 	<div class="colorprev">
-		<span class="fg0" style="background:#333">30</span>
+		<span class="bg7 fg0">30</span>
 		<span class="bg0 fg1">31</span>
 		<span class="bg0 fg2">32</span>
 		<span class="bg0 fg3">33</span>
@@ -55,7 +55,7 @@
 	</div>
 
 	<div class="colorprev">
-		<span class="bg0 fg8">90</span>
+		<span class="bg7 fg8">90</span>
 		<span class="bg0 fg9">91</span>
 		<span class="bg0 fg10">92</span>
 		<span class="bg0 fg11">93</span>
@@ -68,18 +68,18 @@
 	<b>Background</b>
 
 	<div class="colorprev">
-		<span class="bg0 fg15">40</span>
-		<span class="bg1 fg15">41</span>
-		<span class="bg2 fg15">42</span>
+		<span class="bg0 fg15 nb">40</span>
+		<span class="bg1 fg15 nb">41</span>
+		<span class="bg2 fg15 nb">42</span>
 		<span class="bg3 fg0">43</span>
-		<span class="bg4 fg15">44</span>
-		<span class="bg5 fg15">45</span>
-		<span class="bg6 fg15">46</span>
+		<span class="bg4 fg15 nb">44</span>
+		<span class="bg5 fg15 nb">45</span>
+		<span class="bg6 fg15 nb">46</span>
 		<span class="bg7 fg0">47</span>
 	</div>
 
 	<div class="colorprev">
-		<span class="bg8 fg15">100</span>
+		<span class="bg8 fg15 nb">100</span>
 		<span class="bg9 fg0">101</span>
 		<span class="bg10 fg0">102</span>
 		<span class="bg11 fg0">103</span>
