--- a/html_orig/wifi.html
+++ b/html_orig/wifi.html
@@ -50,8 +50,8 @@
 		<tr><td colspan=2 style="white-space: normal;">
 			<p>Some changes require a reboot, dropping connection. It can take a while to re-connect.</p>
 			<p>
-				<b>If you lose access</b>, connect GPIO0 to GND for	5 seconds to enter Client+AP mode.
-				If that fails, try the UART factory reset command "<code>\e]FR\a</code>".
+				<b>If you lose access</b>, hold the BOOT button for 2 seconds (the Tx LED starts blinking) to re-enable AP mode.
+				If that fails, hold the BOOT button for over 5 seconds (rapid Tx LED flashing) to perform a factory reset.
 			<p>
 		</td></tr>
 	</table>
